client/src/App.css
/* Title and menu */

.topbar {
  margin-top: 10vh;
}

.logo-parent {
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo {
  width: 40vw;
}

.menu {
  display: flex;
}

.auth-button{
  margin-left: 20px;
  margin-top: 20px;
  font-size: 18px;
}

.signup{
  margin-right: 20px;
}

.menu-button{
  display: flex;
  flex-direction: row;
  width:89.3px;
}

.logout{
  color: red;
  cursor: pointer;
}
.signup-link{
  text-align: center;
}

/* Explore world */

.world-list{
  margin-top: 10vh;
  margin-left: 10vw;
  margin-bottom: 10vw;
}
.world-header{
  color: #2070BF !important;
}

/* Add world */
.add-world{
  margin-top: 10vh;
  margin-left: 10vw;
  margin-right: 10vw;
}

/* World Homepage */

.world{
  margin-left: 10vw;
  margin-top: 10vh;
  padding: 2vw;
}
.world-title{
  font-size: 2.5vw;
  padding: 2vw;
  display: flex;
}
.join-world{
  margin-left: 4vw;
  margin-top: -0.5vw;
}

.world-details{
  font-size: 1.5vw;
  padding: 2vw;
}
.world-events{
  font-size: 1.5vw;
  padding: 2vw;
}
.world-characters{
  font-size: 1.5vw;
  padding: 2vw;
}
.world-places{
  font-size: 1.5vw;
  padding: 2vw;
}
.world-elements-inside{
  display: flex;
  margin-top: 1vw;
  overflow-x: scroll;
}
.add-character{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.card-character{
  margin-right: 20px;
}

.image-card{
  width: 50%;
  height: 20%;
}

/* Back navigation button */
.back-navigation{
  margin-top: 4vh;
  font-size: 20px;
  color: black;
  cursor: pointer;
  padding: 10px;
}

.back-standard{
  display: flex;
  flex-direction: column;
  margin-left: 8vw;
  margin-top: 8vh;
}

.logo-small{
  width: 250px;
}
.page-name{
  font-size: 2vw;
  font-weight: bolder;
  text-align: center;
  margin-left: 9vw;
  margin-top: 4vh;
  margin-bottom: 1vh;
}

.loading-screen{
  width: 100vw;
  height: 100vh;
}

.world-graph{
  margin-left: 12vw;
  margin-top: 8vh;
  margin-bottom: 50vh;
}

.world-graph-items{
  margin-bottom: 2vw;
}

.world-graph-title{
  font-weight: bolder;
}
.linked-world-title{
  display: flex;
}
.linked-world-characters{
  display: flex;
  margin-top: 6vw;
  margin-bottom: 6vw;
}
.graph-item-event{
  margin-right: 2vw;
  margin-left: 2vw;
  font-weight: bolder;
}
.graph-item-post{
  margin-right: 2vw;
  margin-left: 2vw;
  font-weight: bolder;
}
.tab{
  margin-left: 4vw;
  width: 70vw;
  overflow-x: scroll;
}

.post-box{
  position: fixed;
  bottom: 0.5vh;
  margin-left: 25vw;
  width: 50vw;
}

.container-text{
  position: relative;
}

